# honkbal

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.claude/: launch.json
.github/workflows/: build.yml  ci-python.yml  ci.yml  rebuild.yml
frontend/css/: style.css
frontend/e2e/: loadmore.spec.js  scores.spec.js  server.js  settings.spec.js  standings.spec.js  sw.spec.js
frontend/js/: favorites-init.js  favorites.js  loadmore.js  nav.js  register-sw.js  scores-entry.js  scores.js  settings-entry.js  settings.js  standings-entry.js  standings.js  sw.js
frontend/static/: 404.html  manifest.json
frontend/test/: css-contract.test.js  diamond.test.js  dom-stub.js  favorites.test.js  fetch-stub.js  harness.test.js  loadmore.test.js  logo.test.js  scores.test.js  settings.test.js  standings.test.js  teams.test.js  time.test.js
honkbal/: __init__.py  cli.py  cli_fetch.py  cli_version.py  clock.py  enrichment.py  models.py  season.py
honkbal/config/: calendar_nl.py  feeds.py  rivalries.py  seasons.py  teams.py  toggles.py
honkbal/fetch/: discover_feeds.py  espn_postseason.py  http.py  playoff_odds.py  schedule.py  standings.py
honkbal/parse/: espn_postseason.py  schedule.py
honkbal/render/: context.py  env.py  filters.py  labels.py  logos.py  pages.py  tail.py
honkbal/templates/: _rows.html  base.html  debug.html  nav.html  offline.html  schedule.html  scores.html  settings.html  standings.html  subnav.html
tests/: conftest.py
tests/fixtures/: playoff_odds_fangraphs.json  (+1 more)
(+97 files in other folders)
