[project]
name = "honkbal"
version = "2.0.0"
description = "MLB-speelschema in Nederlandse tijd (statische site)"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "markupsafe>=2.1",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
honkbal = "honkbal.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
